crates/gpui-preview/tests/ui/fail/tuple_struct.rs
use gpui_preview::Previewable;

#[derive(Clone, Default, Previewable)]
struct Foo(String, bool);

fn main() {}
