crates/gpui-preview/tests/ui/fail/tuple_struct.stderr
error: Previewable requires named fields
 --> tests/ui/fail/tuple_struct.rs:4:8
  |
4 | struct Foo(String, bool);
  |        ^^^
